manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: koty
  name: koty
  namespace: devops-0041
spec:
  selector:
    matchLabels:
      app: koty
  replicas: 1
  template:
    metadata:
      labels:
        app: koty
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
