manifests/deployment_with_clone_and_update.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: koty
  name: koty
  namespace: devops-0041
spec:
  selector:
    matchLabels:
      app: koty
  replicas: 1
  template:
    metadata:
      labels:
        app: koty
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: webpage
      - image: bitnami/git
        name: gitupdater
        command:
          - sh
          - -c
          - "cd /tmp/koty; while true; do git pull; sleep 60; done"
        volumeMounts:
          - mountPath: /tmp/koty
            name: webpage
      volumes:
      - name: webpage
        emptyDir: {}
