manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: koty
  name: koty-service
  namespace: devops-0041
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: koty
  type: ClusterIP
