manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koty-ingress
  namespace: devops-0041
spec:
  rules:
  - host: koty.strona.pl
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: koty-service
            port:
              number: 80
